bytter tilbake til dockerfile uten javaagent